Add Groq support for faster, free alternative to Gemini

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,6 @@
 [default]
 GOOGLE_API_KEY = "AIzaSyAhfS2-bBXN3xAYzJHXKXonaaJMwM7ePR8"
+
+# Groq API Key (optional - for faster, free alternative)
+# Get your key at: https://console.groq.com/keys
+GROQ_API_KEY = ""
