Add Telegram bot for scheduled news notifications (6,12,18 KST) and KST time support
- Add get_kst_now() and get_kst_today() functions for Korean Standard Time
- Replace datetime.date.today() with KST-aware functions in all date operations
- Create telegram_bot.py with scheduled news alerts at 6AM, 12PM, 6PM KST
- Add card news format with HTML styling and inline buttons for article links
- Fetch latest news before each scheduled notification
- Create test_telegram_bot.py for testing bot functionality
- Add schedule and python-dotenv to requirements.txt
- Add .gitignore for Python cache, environment, and IDE files
- Remove Tech category from RSS_MAP as requested

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ altair==6.0.0
 feedparser==6.0.11
 fpdf==1.7.2
 google-genai==1.57.0
+schedule==1.2.2
+python-dotenv==1.0.1
 
 # Core dependencies (let pip resolve compatible versions)
 annotated-doc
